[package]
name = "nnsdao"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-kit = "0.4.3"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
serde = "1.0"
serde_cbor = "0.11.2"
async-trait = "0.1.23"
nnsdao_sdk_basic = "0.1.0"