[package]
name = "nnsdao"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-kit = "0.4.3"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
serde = "1.0"
serde_cbor = "0.11.2"
crc32fast = "1.3.2"
base32 = "0.4.0"
ic-ledger-types = "0.1.1"
num-bigint = "0.4.3"
ic-types = "0.3.0"
serde_derive = "1.0.126"
async-trait = "0.1.56"
